--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -6,6 +6,7 @@ allprojects {
 	    compile gradleApi()
 	    compile localGroovy()
 	    compile fileTree(dir: 'libs', include: '*.jar')
+		compile "net.sf.opencsv:opencsv:2.3"
 	}
 
 	repositories {
